[metadata]
name = solarium
author = Johannes Maron
author_email = info@johanneshoppe.com
description = RaspberryPi based LED controller for artificial sunlight
long_description = file: README.rst
url = https://github.com/codingjoe/solarium
license = MIT
license_file = LICENSE
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords = led, raspberrypi

[options]
include_package_data = True
packages = find:
install_requires =
    click
    pysolar
    gpiozero
    pigpio
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov

[options.package_data]
* = *.txt, *.rst, *.html, *.po

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    solarium = solarium.__main__:main

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=solarium

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 88
known_first_party = solarium, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
